[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.10.0",
    "ninja; platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.project_name }} flow equations for ODEVisualization"
readme = "README.md"
{%- if cookiecutter.license != "None" %}
{%- if cookiecutter.license == "MIT" %}
license = {text = "MIT"}
{%- elif cookiecutter.license == "BSD-2" %}
license = {text = "BSD-2-Clause"}
{%- elif cookiecutter.license == "GPL-3.0" %}
license = {text = "GPL-3.0-only"}
{%- elif cookiecutter.license == "LGPL-3.0" %}
license = {text = "LGPL-3.0-only"}
{%- endif %}
{%- endif %}
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "your@email.com"}
]
keywords = ["ode", "flow-equations", "differential-equations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "odevisualization",
]

[tool.setuptools.packages.find]
where = ["python_pybind"]
include = ["{{ cookiecutter.project_slug.replace('-', '_') }}*"]

[tool.setuptools.package-data]
"{{ cookiecutter.project_slug.replace('-', '_') }}" = ["*.so", "*.dll", "*.dylib", "*.pyd"]
